<action dev="NKB" type="add" context="skins">         New "extra-css" tag in skinconf can contain css that is injected in         forrest.css, added in the skins by default.       </action>       <action dev="NKB" type="add" context="skins">         New section in skinconf about colors used by the site.         Enabled for krysalis-site and tigris-style.         If a needed color is not specified, the default one is used.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9100 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,11 +1,4 @@
-<?xml version="1.0"?>
-<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
-  <xsl:output method = "text"  omit-xml-declaration="yes"  />
-    
-  <xsl:template match="skinconfig">
-  <!-- insert CSS here -->
-  
-/* $Id: page.css.xslt,v 1.1 2003/12/30 00:02:56 nicolaken Exp $
+/* $Id: page.css,v 1.5 2004/01/03 15:36:08 nicolaken Exp $
 <xsl:value-of select="group-logo"/>
 */
 
@@ -267,12 +260,15 @@ table .title {  width:100%; border: 0px; }
 
  body           { background-color: #FFFFFF;  color:#000000;}   
 .header         { background-color: #FFFFFF;}   
+.heading         { background-color: #a5b6c6;}   
+.subheading      { background-color: #a5b6c6;}   
 .border         { background-color: #a5b6c6;}   
 .subborder      { background-color: #CFDCED;}
 .dialog         { background-color: #F7F7F7;}    
 .footer         { background-color: #a5b6c6;}   
 .tab.selected   { background-color: #a5b6c6;}
 .tab.unselected { background-color: #F7F7F7;}
+.level2tabstrip { background-color: #a5b6c6;}  
 .level2tab.selected         {}
 .level2tab.unselected       {}   
 .level2tab.separator        {}
@@ -378,12 +374,3 @@ table .title { background-color: #FFFFFF; }
   :visited { voice-family: betty, female }
   :active { voice-family: betty, female; pitch-range: 80; pitch: x-high }
 }
-
-      
-  <!-- end CSS here -->
-  </xsl:template>
-
-  <xsl:template match="*"></xsl:template>
-  <xsl:template match="text()"></xsl:template>
-
-</xsl:stylesheet>
