Fix left-nav size: now it's large 11em, so it doesn't get too small or too large, but still accomodates font size changes.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9101 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,4 +1,4 @@
-/* $Id: page.css,v 1.5 2004/01/03 15:36:08 nicolaken Exp $
+/* $Id: page.css,v 1.6 2004/01/03 16:20:35 nicolaken Exp $
 <xsl:value-of select="group-logo"/>
 */
 
@@ -54,8 +54,9 @@ table .title {  width:100%; border: 0px; }
         padding: 8px 8px 8px 8px;  
         margin: 0px; 
         font-size : 70%;        
-	border-style: solid; 
+	    border-style: solid; 
         border-width: 1px;
+        width: 11em;
 }
 
 .menutitle { 
