Fixes to the skin to bring it up to snuff.
Added lateral search bar.
Added credits section.
Use automatically skinnable borders
Fix code font size.
Other small enhancements.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9104 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,6 +1,4 @@
-/* $Id: page.css,v 1.6 2004/01/03 16:20:35 nicolaken Exp $
-<xsl:value-of select="group-logo"/>
-*/
+/* $Id: page.css,v 1.7 2004/01/08 16:18:44 nicolaken Exp $*/
 
 /* ==================== html tags ============================ */
 
@@ -25,7 +23,7 @@ table .title {  width:100%; border: 0px; }
 /* ==================== general class modifiers ============================ */
 
 .content { padding: 5px 5px 5px 10px; font : small Verdana, Helvetica, sans-serif;  font-size : 80%;  }
-.content .ForrestTable { width: 100%; font-size : 100%;}
+.content .ForrestTable { width: 100%; font-size : 100%; empty-cells: show;}
 .content .ForrestTable caption { text-align: left; font-weight: bold; }
 .content .ForrestTable th { text-align: center; }
 
@@ -35,12 +33,12 @@ table .title {  width:100%; border: 0px; }
 .headerlogo { padding: 0px 2px 2px 0px;  }
 .skin       { border: 0;  margin: 0px;}
 .figure     { border: 0; vertical-align: top ; margin-top: 10px; margin-bottom: 10px; }
-.codefrag   { font-family: "Courier New", Courier, monospace; font-size : 120%;}
+.codefrag   { font-family: "Courier New", Courier, monospace; font-size : 100%;}
 .minitoc    { list-style-image: url('images/current.gif'); font-weight : normal;}
 .search     { font-size : 70%;  }
 .datenote   { font-size : 60%; text-align: right;  height: 10px;}
 .dtdTag     { text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
-.code       { border-style: solid;  border-width: 1px;  font-size : 120%; padding: 1em 1.33em 1em 1.33em;}
+.code       { border-style: solid;  border-width: 1px;  font-size : 90%; padding: 1em 1.33em 1em 1.33em;}
 .label      { font-weight: bold; }
 
 /* ==================== menu ============================ */
@@ -138,6 +136,8 @@ table .title {  width:100%; border: 0px; }
        background-color: #a5b6c6;
 }
 
+.bottomborder { height:10px; }
+    
 /* ==================== tabs ============================ */
 
 .tab.separator { width:6px; }
@@ -209,8 +209,9 @@ table .title {  width:100%; border: 0px; }
            width: 100%;
            font-size : 70%;  }
 	   
+/* ==================== corners ============================ */
 .top-left {
-	background-image: url(images/top-left.png);
+	background-image: url(images/rc-t-l-5-1body-2tab-selected-3tab-selected.png);
 	background-repeat: no-repeat;
 	background-position: top left;
 	width : 5px;
@@ -218,15 +219,30 @@ table .title {  width:100%; border: 0px; }
 }
 
 .top-right {
-	background-image: url(images/top-right.png);
+	background-image: url(images/rc-t-r-5-1body-2tab-selected-3tab-selected.png);
 	background-repeat: no-repeat;
 	background-position: top right;
 	width : 5px;
 	height : 5px;
 }
 
+.tab.selected.top-left {
+	background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
+}
+
+.tab.selected.top-right {
+	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
+}
+.tab.unselected.top-left {
+	background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
+}
+
+.tab.unselected.top-right {   
+	background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
+}
+
 .bottom-left {
-	background-image: url(images/bottom-left.png);
+	background-image: url(images/rc-b-l-5-1body-2tab-selected-3tab-selected.png);
 	background-repeat: no-repeat;
 	background-position: bottom left;
 	width : 5px;
@@ -234,27 +250,35 @@ table .title {  width:100%; border: 0px; }
 }
 
 .bottom-right {
-	background-image: url(images/bottom-right.png);
+	background-image: url(images/rc-b-r-5-1body-2tab-selected-3tab-selected.png);
 	background-repeat: no-repeat;
 	background-position: bottom right;
 	width : 5px;
 	height : 5px;
 }
 
-.bottom-left-thick {
-	background-image: url(images/bottom-left.png);
-	background-repeat: no-repeat;
-	background-position: bottom left;
-	width : 5px;
-	height : 9px;
+.search.border.bottom-left {
+	background-image: url(images/rc-b-l-5-1header-2tab-selected-3tab-selected.png);
 }
 
-.bottom-right-thick {
-	background-image: url(images/bottom-right.png);
-	background-repeat: no-repeat;
-	background-position: bottom right;
-	width : 5px;
-	height : 9px;
+.search.border.bottom-right {
+	background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
+}
+
+.heading.bottom-left {
+	background-image: url(images/rc-b-l-4-1body-2heading-3heading.png);
+}
+
+.heading.bottom-right {
+	background-image: url(images/rc-b-r-4-1body-2heading-3heading.png);
+}
+
+.subheading.bottom-left {
+	background-image: url(images/rc-b-l-3-1body-2subheading-3subheading.png);
+}
+
+.subheading.bottom-right {
+	background-image: url(images/rc-b-r-3-1body-2subheading-3subheading.png);
 }
 
 /* ==================== main block colors ============================ */
