date was wrapping onto several lines in mozilla
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9107 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,4 +1,4 @@
-/* $Id: page.css,v 1.7 2004/01/08 16:18:44 nicolaken Exp $*/
+/* $Id: page.css,v 1.8 2004/01/09 13:53:23 brondsem Exp $*/
 
 /* ==================== html tags ============================ */
 
@@ -36,7 +36,7 @@ table .title {  width:100%; border: 0px; }
 .codefrag   { font-family: "Courier New", Courier, monospace; font-size : 100%;}
 .minitoc    { list-style-image: url('images/current.gif'); font-weight : normal;}
 .search     { font-size : 70%;  }
-.datenote   { font-size : 60%; text-align: right;  height: 10px;}
+.datenote   { font-size : 60%; text-align: right;  height: 10px; white-space:nowrap;}
 .dtdTag     { text-transform : uppercase;  font-style : normal;  font-size : 120%;  font-weight : bold; }
 .code       { border-style: solid;  border-width: 1px;  font-size : 90%; padding: 1em 1.33em 1em 1.33em;}
 .label      { font-weight: bold; }
