Fix the krysalis-site skin menu border and width (finally correct).
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9116 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,4 +1,4 @@
-/* $Id: page.css,v 1.8 2004/01/09 13:53:23 brondsem Exp $*/
+/* $Id: page.css,v 1.9 2004/01/11 10:36:29 nicolaken Exp $*/
 
 /* ==================== html tags ============================ */
 
@@ -48,13 +48,15 @@ table .title {  width:100%; border: 0px; }
 .menu a:active {  font-weight: normal; }
 .menu a:hover {  font-weight: normal; }
 
+.menuarea { width:10em;}
+
 .menu { 
         padding: 8px 8px 8px 8px;  
         margin: 0px; 
-        font-size : 70%;        
-	    border-style: solid; 
-        border-width: 1px;
-        width: 11em;
+        font-size : 70%;      
+	    border-right: 1px solid;
+	    border-left: 1px solid;
+        width: 100%;
 }
 
 .menutitle { 
