--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -1,13 +1,15 @@
-/* $Id: page.css,v 1.10 2004/01/19 18:10:48 nicolaken Exp $*/
+/* $Id: page.css,v 1.11 2004/01/23 09:53:04 nicolaken Exp $*/
 
 /* ==================== html tags ============================ */
 
 body {  margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif; }
 
 h1     { font-size : 160%; margin: 0px 0px 0px 0px;  padding: 0px; }
-h2     { font-size : 140%; margin: 10px 0px 0px 0px; padding: 0px; font-weight : bold;}
-h3     { font-size : 130%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold; }
-h4     { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h2     { font-size : 140%; margin: 10px 0px 0px 0px; padding: 18px; font-weight : bold;}
+h3     { font-size : 130%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold; }
+.h3 { margin: 22px 0px 3px 0px; }
+h4     { font-size : 120%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+.h4 { margin: 18px 0px 0px 0px; }
 h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
 h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 
@@ -54,14 +56,14 @@ table .title {  width:100%; border: 0px; }
         padding: 8px 8px 8px 8px;  
         margin: 0px; 
         font-size : 70%;      
-	    border-right: 1px solid;
-	    border-left: 1px solid;
+        border-right: 1px solid;
+	border-left: 1px solid;
         width: 100%;
 }
 
 .menutitle { 
         cursor:pointer;
-        padding: 0px 3px 5px 10px;  
+        padding: 5px 3px 5px 10px;  
         background-image: url('images/chapter.gif');
         background-repeat: no-repeat;
         background-position: center left;
@@ -78,14 +80,15 @@ table .title {  width:100%; border: 0px; }
         font-weight : bold; }
         
 .menu .menuitem { 
-        padding: 0px 0px 2px 10px;  
+        padding: 0px 0px 2px 12px;  
         background-image: url('images/page.gif');
         background-repeat: no-repeat;
         background-position: center left;
         font-weight : normal; }
 
 .menu .menupage {         
-        padding: 4px 3px 5px 10px;  
+        margin: 5px 0px 5px 0px; 
+        padding: 0px 3px 0px 12px;  
         background-image: url('images/current.gif');
         background-repeat: no-repeat;
         background-position: top left;
@@ -100,8 +103,10 @@ table .title {  width:100%; border: 0px; }
 .menu .menupageitemgroup { 
         padding: 3px 0px 4px 6px;    
         font-style : normal;
-        border-style: solid; 
-        border-width: 1px;}
+        border-bottom: 1px solid ;
+        border-left: 1px solid ;
+        border-right: 1px solid ;        
+        }
 
 .menu .menupageitem {             
         font-style : normal;
@@ -267,20 +272,36 @@ table .title {  width:100%; border: 0px; }
 	background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
 }
 
-.heading.bottom-left {
+.heading .bottom-left {
 	background-image: url(images/rc-b-l-4-1body-2heading-3heading.png);
 }
 
-.heading.bottom-right {
+.heading .bottom-right {
 	background-image: url(images/rc-b-r-4-1body-2heading-3heading.png);
 }
 
-.subheading.bottom-left {
+.heading .top-left {
+	background-image: url(images/rc-t-l-4-1body-2heading-3heading.png);
+}
+
+.heading .top-right {
+	background-image: url(images/rc-t-r-4-1body-2heading-3heading.png);
+}
+
+.subheading .bottom-left {
 	background-image: url(images/rc-b-l-3-1body-2subheading-3subheading.png);
 }
 
-.subheading.bottom-right {
+.subheading  .bottom-right {
 	background-image: url(images/rc-b-r-3-1body-2subheading-3subheading.png);
+}
+
+.subheading  .top-left {
+	background-image: url(images/rc-t-l-3-1body-2subheading-3subheading.png);
+}
+
+.subheading  .top-right {
+	background-image: url(images/rc-t-r-3-1body-2subheading-3subheading.png);
 }
 
 /* ==================== main block colors ============================ */
@@ -305,7 +326,6 @@ table .title {  width:100%; border: 0px; }
 a:link    { color: #0F3660; }
 a:visited { color: #000044; }
 a:active  { color: #800000; }
-a:hover   { border: 0px solid #a5b6c6; background: #CFDCED; }
 .menu .menupagetitle     { background-color:#CFDCED; border-color: #a5b6c6;}
 .menu .menupageitemgroup { background-color:#FFFFFF; border-color: #a5b6c6;}
 .menu                    { border-color: #a5b6c6;}
