Fix pathnames for skin images. Submitted by: Rick Tessner Issue: FOR-163
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20827 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/tigris-style/css/tigris.css
+++ b/src/core/context/skins/tigris-style/css/tigris.css
@@ -24,7 +24,7 @@ body {
 }
 
 .app h3, .app h4, .tabs td, .tabs th, .functnbar {
-	background-image: url(../images/nw_maj_rond.gif);
+	background-image: url(images/nw_maj_rond.gif);
 	background-repeat: no-repeat;
 }
 
@@ -34,14 +34,14 @@ body {
 
 .functnbar2, .functnbar3 {
 	background-color: #aaa;
-	background-image: url(../images/sw_maj_rond.gif);
+	background-image: url(images/sw_maj_rond.gif);
 	background-repeat: no-repeat;
 	background-position: bottom left;
 }
 
 .functnbar3 {
 	background-color: #ddd;
-	background-image: url(../images/sw_med_rond.gif);
+	background-image: url(images/sw_med_rond.gif);
 }
 
 .functnbar, .functnbar2, .functnbar3 {
@@ -54,7 +54,7 @@ body {
 }
 
 #navcolumn .body div, body.docs #toc li li {
-	background-image: url(../images/strich.gif);
+	background-image: url(images/strich.gif);
 	background-repeat: no-repeat;
 	background-position: .5em .5em;
 }
@@ -152,13 +152,13 @@ body.docs div.docs {
 }
 
 #helptext .label {
-	background-image: url(../images/icon_help_sml.gif);
+	background-image: url(images/icon_help_sml.gif);
 	background-repeat: no-repeat;
 	background-position: 97%;
 }
 
 body.docs {
-	background: #eee url(../images/help_logo.gif) top right no-repeat !important;
+	background: #eee url(images/help_logo.gif) top right no-repeat !important;
 }
 
 .docs h3, .docs h4 {
@@ -213,43 +213,43 @@ body.docs {
 }
 
 .expandedwaste {
-	background: url(../images/icon_arrowwaste2_sml.gif) no-repeat;
+	background: url(images/icon_arrowwaste2_sml.gif) no-repeat;
 }
 
 .collapsedwaste {
-	background: url(../images/icon_arrowwaste1_sml.gif) no-repeat;
+	background: url(images/icon_arrowwaste1_sml.gif) no-repeat;
 }
 
 .filebrowse .expanded, .filebrowse-alt .expanded {
-	background-image: url(../images/icon_arrowfolderopen2_sml.gif);
+	background-image: url(images/icon_arrowfolderopen2_sml.gif);
 	background-repeat: no-repeat;
 }
 
 .filebrowse .collapsed, .filebrowse-alt .collapsed {
-	background-image: url(../images/icon_arrowfolderclosed1_sml.gif);
+	background-image: url(images/icon_arrowfolderclosed1_sml.gif);
 	background-repeat: no-repeat;
 }
 
 .filebrowse .leafnode, .filebrowse-alt .leafnode {
-	background-image: url(../images/icon_folder_sml.gif);
+	background-image: url(images/icon_folder_sml.gif);
 	background-repeat: no-repeat;
 }
 
 .filebrowse .leaf, .filebrowse-alt .leaf {
-	background-image: url(../images/icon_doc_sml.gif);
+	background-image: url(images/icon_doc_sml.gif);
 	background-repeat: no-repeat;
 }
 
 .sortup {
-	background: url(../images/icon_sortup.gif) no-repeat;
+	background: url(images/icon_sortup.gif) no-repeat;
 }
 
 .sortdown {
-	background: url(../images/icon_sortdown.gif) no-repeat;
+	background: url(images/icon_sortdown.gif) no-repeat;
 }
 
 .collapsedwaste {
-	background: url(../images/icon_arrowwaste1_sml.gif) no-repeat;
+	background: url(images/icon_arrowwaste1_sml.gif) no-repeat;
 }
 
 body .grid td {
@@ -269,56 +269,56 @@ body .grid td {
 .errormessage, .warningmessage, .donemessage, .infomessage {
 	border-top: 5px solid #900;
 	border-left: 1px solid #900;
-	background-image: url(../images/icon_error_lrg.gif);
+	background-image: url(images/icon_error_lrg.gif);
 	background-repeat: no-repeat;
 	background-position: 5px 1.33em;
 }
 
 .warningmessage {
-	background-image: url(../images/icon_warning_lrg.gif);
+	background-image: url(images/icon_warning_lrg.gif);
 	border-color: #c60;
 }
 
 .donemessage {
-	background-image: url(../images/icon_success_lrg.gif);
+	background-image: url(images/icon_success_lrg.gif);
 	border-color: #090;
 }
 
 .infomessage {
-	background-image: url(../images/icon_info_lrg.gif);
+	background-image: url(images/icon_info_lrg.gif);
 	border-color: #069;
 }
 
 .docinfo {
-	background: url(../images/icon_doc_lrg.gif) no-repeat;
+	background: url(images/icon_doc_lrg.gif) no-repeat;
 }
 
 .dirinfo {
-	background: url(../images/icon_folder_lrg.gif) no-repeat;
+	background: url(images/icon_folder_lrg.gif) no-repeat;
 }
 
 .memberinfo {
-	background: url(../images/icon_members_lrg.gif) no-repeat;
+	background: url(images/icon_members_lrg.gif) no-repeat;
 }
 
 .usergroupinfo {
-	background: url(../images/icon_usergroups_lrg.gif) no-repeat;
+	background: url(images/icon_usergroups_lrg.gif) no-repeat;
 }
 
 .errormark, .warningmark, .donemark, .infomark {
-	background: url(../images/icon_error_sml.gif) no-repeat;
+	background: url(images/icon_error_sml.gif) no-repeat;
 }
 
 .warningmark {
-	background-image: url(../images/icon_warning_sml.gif);
+	background-image: url(images/icon_warning_sml.gif);
 }
 
 .donemark {
-	background-image: url(../images/icon_success_sml.gif);
+	background-image: url(images/icon_success_sml.gif);
 }
 
 .infomark {
-	background-image: url(../images/icon_info_sml.gif);
+	background-image: url(images/icon_info_sml.gif);
 }
 
 .cvsdiff, .cvsblame {
