prevent borders around linked images
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21100 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/tigris-style/css/tigris.css
+++ b/src/core/context/skins/tigris-style/css/tigris.css
@@ -23,6 +23,8 @@ body {
 	color: #000;
 }
 
+img { border: 0; }
+
 .app h3, .app h4, .tabs td, .tabs th, .functnbar {
 	background-image: url(images/nw_maj_rond.gif);
 	background-repeat: no-repeat;
