HAck to make IE use the right corners, as it does not correctly (IIUC) render multiple valuyes in the same class attribute.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21529 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -246,18 +246,19 @@ table .title {  width:100%; border: 0px; }
 	height : 5px;
 }
 
-.tab.selected.top-left {
+.TSTL {
 	background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
 }
 
-.tab.selected.top-right {
+.TSTR {
 	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
 }
-.tab.unselected.top-left {
+
+.TUTL {
 	background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
 }
 
-.tab.unselected.top-right {   
+.TUTR {   
 	background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
 }
 
@@ -277,11 +278,11 @@ table .title {  width:100%; border: 0px; }
 	height : 5px;
 }
 
-.search.border.bottom-left {
+.SBBL{
 	background-image: url(images/rc-b-l-5-1header-2tab-selected-3tab-selected.png);
 }
 
-.search.border.bottom-right {
+.SBBR {
 	background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
 }
 
