>> - desactivate the font size script > > I would prefer not to, it's an important part for accessibility.
...I had to because of the feedback in lenya-dev, so I started to patch the skinconf.xsl:

I added
<!-- If true, the font size script will not be rendered -->
<xsl:if test="not(disable-font-script)">
 <disable-font-script>true</disable-font-script>
</xsl:if>

Then I added to site2xhtml.xsl
<!-- If true, the font size script will not be rendered -->
  <xsl:variable name="disable-font-script" select="//skinconfig/disable-font-script"/>

The above mentioned patches where in skin/common.

Then I patched the site2xhtml.xsl of the krysalis-site like this:
<xsl:if test="$disable-font-script = 'false'">
            Font size:
              &#160;<input type="button" onclick="ndeSetTextSize('reset'); return false;" title="Reset text" class="resetfont" value="Reset"/>
              &#160;<input type="button" onclick="ndeSetTextSize('decr'); return false;" title="Shrink text" class="smallerfont" value="-a"/>
              &#160;<input type="button" onclick="ndeSetTextSize('incr'); return false;" title="Enlarge text" class="biggerfont" value="+a"/>
</xsl:if>

Last but not least I declared the disable-font-script element in the skinconf.dtd to use it like follow in my skinconf.xml
<!-- If true, the font size script will not be rendered -->
  <disable-font-script>true</disable-font-script> 

>> - move the right logo to absolute right (if no search box is activated)
>
>
>
> Sure.
>

I reckon a <xsl:choose/> within the document2xhtml.xsl would do the job:
- if the search box is disabled the colspan of the right logo would be +1 and align="right".
- if the search box is disabled the <td> of the searchbox column would not be displayed.
- if the search box is enabled the old style is applied. 

>> - desactivate the published notice on the top right
->now change color of published notice with
    <color name="published" value="#000000"/>

thorsten


git-svn-id: https://svn.apache.

--- a/src/core/context/skins/krysalis-site/css/page.css
+++ b/src/core/context/skins/krysalis-site/css/page.css
@@ -71,7 +71,7 @@ table .title {  width:100%; border: 0px; }
         margin: 0px; 
         font-size : 70%;      
         border-right: 1px solid;
-	border-left: 1px solid;
+		border-left: 1px solid;
 }
 
 .menutitle { 
@@ -157,7 +157,9 @@ table .title {  width:100%; border: 0px; }
 }
 
 .bottomborder { height:10px; }
-    
+
+.published { color: #000000;}
+   
 /* ==================== tabs ============================ */
 
 .tab.separator { width:6px; }
@@ -173,20 +175,20 @@ table .title {  width:100%; border: 0px; }
 
 .level2tab { font-size : 80%; font-weight: normal; height: 10px;}
 
-.tab a:link {  font-weight: normal;}
+.tab a:link {  font-weight: normal; }
 .tab a:visited { font-weight: normal; }
 .tab a:active { font-weight: normal; }
 .tab a:hover {  font-weight: normal; }
 
-.tab.selected  a:link {  font-weight: bold;}
+.tab.selected  a:link {  font-weight: bold; }
 .tab.selected  a:visited { font-weight: bold; }
 .tab.selected  a:active { font-weight: bold; }
 .tab.selected  a:hover {  font-weight: bold; }
 
 /* ==================== snail trail ============================ */
 
-.trail { font-size: 70%;  }
-.trail a:link {  font-weight: normal;}
+.trail { font-size: 70%; }
+.trail a:link {  font-weight: normal; }
 .trail a:visited {  font-weight: normal; }
 .trail a:active {  font-weight: normal; }
 .trail a:hover {  font-weight: normal; }
