git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@22605 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -113,16 +113,25 @@ html>body #top .searchbox {
 	background: white url("images/sidebar_bg.gif") repeat-y left;
 	border-top: solid #4C6C8F 15px;
 }
-
+#main .breadtrail {
+	position: relative;
+	background: #CFDCED;
+	color: black;
+	border-bottom: solid 1px white;
+	padding: 0px 180px;
+	font-size: 75%;
+	z-index:2;
+}
 
 /**
  * Side menu
  */
+ /* padding-top: 15px; padding-right: 15px; top:-15px; left:10px; z-index: 10; */
  
 #menu {
 	position: relative;
 	float: left;
-	width: 160px;
+	width: 150px;
 }
 #menu h1 {
 	display: block;
