Changed the overall design and added more color support
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@22666 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -29,12 +29,16 @@ body {
 	background: url("images/header_white_line.gif") repeat-x bottom;
 }
 
-#top .grouplogo,
+#top .grouplogo {
+	padding: 7px 0 10px 10px;
+	float: left;
+	text-align: left;
+}
 #top .projectlogo {
 	padding: 7px 0 10px 10px;
 	float: left;
 	width: 33%;
-	text-align: center;
+	text-align: right;
 }
 #top .projectlogoA1 {
 	padding: 7px 0 10px 10px;
@@ -44,9 +48,10 @@ body {
 #top .searchbox {
 	position: absolute;
 	right: 10px;
+	top: 100px;
 	font-size: 70%;
 	white-space: nowrap;
-	text-align: left;
+	text-align: right;
 	color: white;
 	background: #4C6C8F url("images/tab-right.gif") no-repeat right top;
 	bottom: -1px; /* compensate for IE rendering issue */
@@ -110,7 +115,7 @@ html>body #top .searchbox {
 #main {
 	position: relative;
 	clear: both;
-	background: white url("images/sidebar_bg.gif") repeat-y left;
+	background: white;
 	border-top: solid #4C6C8F 15px;
 }
 #main .breadtrail {
@@ -126,12 +131,19 @@ html>body #top .searchbox {
 /**
  * Side menu
  */
- /* padding-top: 15px; padding-right: 15px; top:-15px; left:10px; z-index: 10; */
+ /* padding-top: 15px; padding-right: 15px; top:-15px; left:10px; z-index: 10;  */
  
 #menu {
 	position: relative;
 	float: left;
-	width: 150px;
+	width: 160px;
+padding-top: 15px;
+top:-15px; 
+left:10px; 
+z-index: 10;
+	border-left: solid black 1px;
+	border-bottom: solid black 1px;
+	border-right: solid black 1px;
 }
 #menu h1 {
 	display: block;
@@ -151,9 +163,10 @@ html>body #top .searchbox {
 }
 #menu ul ul ul {
 	padding: 0;
+	width: 145px;
 }
 #menu li li {
-	padding: 3px 12px;
+	padding: 3px 0px 3px 12px;
 	margin: 0;
 }
 #menu li li h1 {
