First step for round corners. Still not 100% right.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@22716 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -91,14 +91,25 @@ html>body #top .searchbox {
 	margin: 0;
 	list-style: none;
 }
-
+/*	background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
 #tabs li {
 	float: left;
-	background: #CFDCED url("images/tab-right.gif") no-repeat right top;
+	background-image: url(images/rc-t-r-5-1body-2tab-unselected-3tab-unselected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+	background-color: #000000;
 	margin: 0 3px 0 0;
 	padding: 0;
 }
-
+#tabs li .current {
+	float: left;
+	background-image: url(images/rc-t-r-5-1body-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+	margin: 0 3px 0 0;
+	padding: 0;
+}
+/*background: url("images/tab-left.gif") no-repeat left top;*/
 #tabs li a {
 	float: left;
 	display: block;
@@ -107,7 +118,9 @@ html>body #top .searchbox {
 	text-decoration: none;
 	color: black;
 	white-space: nowrap;
-	background: url("images/tab-left.gif") no-repeat left top;
+	background-image: url(images/rc-t-l-5-1body-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top left;
 	padding: 5px 15px 4px;
 	width: .1em; /* IE/Win fix */
 }
@@ -146,16 +159,15 @@ html>body #top .searchbox {
 /**
  * Side menu
  */
- /* padding-top: 15px; padding-right: 15px; top:-15px; left:10px; z-index: 10;  */
  
 #menu {
 	position: relative;
 	float: left;
 	width: 160px;
-padding-top: 15px;
-top:-15px; 
-left:10px; 
-z-index: 10;
+	padding-top: 15px;
+	top:-15px; 
+	left:10px; 
+	z-index: 10;
 	border-left: solid black 1px;
 	border-bottom: solid black 1px;
 	border-right: solid black 1px;
