Round corners svn2png finished
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@22733 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -68,7 +68,9 @@ body {
 	white-space: nowrap;
 	text-align: right;
 	color: white;
-	background: #4C6C8F url("images/tab-right.gif") no-repeat right top;
+	background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
+	background-repeat: no-repeat;
+	background-position: top right;
 	bottom: -1px; /* compensate for IE rendering issue */
 }
 html>body #top .searchbox {
@@ -76,7 +78,9 @@ html>body #top .searchbox {
 }
 #top .searchbox form {
 	display: block;
-	background: url("images/tab-left.gif") no-repeat left top;
+	background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
+	background-repeat: no-repeat;
+	background-position: top left;
 	padding: 5px 10px;
 	margin: 0;
 }
@@ -94,7 +98,7 @@ html>body #top .searchbox {
 /*	background: #CFDCED url("images/tab-right.gif") no-repeat right top;*/
 #tabs li {
 	float: left;
-	background-image: url(images/rc-t-r-5-1body-2tab-unselected-3tab-unselected.png);
+	background-image: url(images/rc-t-r-5-1header-2tab-unselected-3tab-unselected.png);
 	background-repeat: no-repeat;
 	background-position: top right;
 	background-color: #000000;
@@ -111,7 +115,7 @@ html>body #top .searchbox {
 	text-decoration: none;
 	color: black;
 	white-space: nowrap;
-	background-image: url(images/rc-t-l-5-1body-2tab-selected-3tab-selected.png);
+	background-image: url(images/rc-t-l-5-1header-2tab-unselected-3tab-unselected.png);
 	background-repeat: no-repeat;
 	background-position: top left;
 	padding: 5px 15px 4px;
@@ -126,12 +130,17 @@ html>body #top .searchbox {
 
 #top .header .current {
 	background-color: #4C6C8F;
-	background-image: url(images/rc-t-r-5-1body-2tab-selected-3tab-selected.png);
+	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
 }
 #top .header .current a {
 	font-weight: bold;
 	padding-bottom: 5px;
 	color: white;
+	background-image: url(images/rc-t-l-5-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top left;
 }
 
 #main {
@@ -151,9 +160,47 @@ html>body #top .searchbox {
 }
 
 /**
+* Round corner
+*/
+#roundtop { 
+	background-image: url(images/rc-t-r-15-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
+#roundbottom {
+	background-image: url(images/rc-b-r-15-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
+img.corner {
+   width: 15px;
+   height: 15px;
+   border: none;
+   display: block !important;
+}
+#roundtopsmall { 
+	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
+#roundbottomsmall {
+	background-image: url(images/rc-b-r-5-1header-2tab-selected-3tab-selected.png);
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
+img.cornersmall {
+   width: 5px;
+   height: 5px;
+   border: none;
+   display: block !important;
+}
+/**
  * Side menu
  */
- 
 #menu {
 	position: relative;
 	float: left;
@@ -162,9 +209,7 @@ html>body #top .searchbox {
 	top:-15px; 
 	left:10px; 
 	z-index: 10;
-	border-left: solid black 1px;
-	border-bottom: solid black 1px;
-	border-right: solid black 1px;
+	background-color: #f90;
 }
 #menu h1 {
 	display: block;
