Introduced the publish div, still have to make it config.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@22769 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -63,24 +63,22 @@ body {
 #top .searchbox {
 	position: absolute;
 	right: 10px;
-	top: 100px;
+	top: 90px;
+	height: 42px;
 	font-size: 70%;
 	white-space: nowrap;
 	text-align: right;
 	color: white;
-	background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
-	background-repeat: no-repeat;
-	background-position: top right;
+	background-color: #000000;
+	z-index:0;
 	bottom: -1px; /* compensate for IE rendering issue */
 }
 html>body #top .searchbox {
 	bottom: 0px;
 }
 #top .searchbox form {
-	display: block;
-	background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
-	background-repeat: no-repeat;
-	background-position: top left;
+
+	
 	padding: 5px 10px;
 	margin: 0;
 }
@@ -142,21 +140,33 @@ html>body #top .searchbox {
 	background-repeat: no-repeat;
 	background-position: top left;
 }
+#published { 
+padding-right: 10px;
+color: #ffffff;
+font-size : 60%; 
+text-align: right;  
+white-space:nowrap;
+background-color: #4C6C8F;
+}
 
+/*
+*	border-top: solid #4C6C8F 15px;
+*/
 #main {
 	position: relative;
 	clear: both;
 	background: white;
-	border-top: solid #4C6C8F 15px;
+
 }
 #main .breadtrail {
 	position: relative;
 	background: #CFDCED;
 	color: black;
-	border-bottom: solid 1px white;
+	border-bottom: solid 1px black;
+	border-top: solid 1px black;
 	padding: 0px 180px;
 	font-size: 75%;
-	z-index:2;
+	z-index:10;
 }
 
 /**
@@ -181,7 +191,7 @@ img.corner {
    display: block !important;
 }
 #roundtopsmall { 
-	background-image: url(images/rc-t-r-5-1header-2tab-selected-3tab-selected.png);
+	background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
 	background-repeat: no-repeat;
 	background-position: top right;
 }
@@ -205,10 +215,10 @@ img.cornersmall {
 	position: relative;
 	float: left;
 	width: 160px;
-	padding-top: 15px;
-	top:-15px; 
+	padding-top: 0px;
+	top:-16px; 
 	left:10px; 
-	z-index: 10;
+	z-index: 20;
 	background-color: #f90;
 }
 #menu h1 {
@@ -217,9 +227,10 @@ img.cornersmall {
 	background-color: #cfdced;
 	color: black;
 	font-size: 110%;
-	border-top: solid white 1px;
+	border-top: solid #336699 1px;
 	border-bottom: 1px solid #336699;
-	border-right: solid #336699 1px;
+	border-right: solid #336699 2px;
+	border-left: solid #336699 2px;
 }
 #menu ul {
 	width: 160px;
@@ -336,13 +347,19 @@ li p {
 
 .pdflink {
 	float: right;
+	margin: 0;
+	padding: 0;
 }
-
+.pdflink br {
+	margin-top: -10px;
+	padding-left: 1px;
+}
 .pdflink a {
 	display: block;
-	font-size: 90%;
+	font-size: 70%;
 	text-align: center;
-	margin: 0 5px;
+	margin: 0;
+	padding: 0;
 }
 
 .pdflink img {
