Done some points from the note.txt! Mainly footer and credit!
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@23194 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -141,12 +141,12 @@ html>body #top .searchbox {
 	background-position: top left;
 }
 #published { 
-padding-right: 10px;
-color: #ffffff;
-font-size : 60%; 
-text-align: right;  
-white-space:nowrap;
-background-color: #4C6C8F;
+	padding-right: 10px;
+	color: #ffffff;
+	font-size : 60%; 
+	text-align: right;  
+	white-space:nowrap;
+	background-color: #4C6C8F;
 }
 
 /*
@@ -266,7 +266,9 @@ img.cornersmall {
 	font-weight: bold;
 	font-size: 90%;
 }
-
+#menu #credit {
+	text-align: center;  
+}
 #content {
 	padding: 20px 20px 20px 180px;
 	margin: 0;
@@ -307,32 +309,6 @@ img.cornersmall {
 	margin-right: 5px;
 }
 
-/**
- * Tables
- */
-
-#content .ForrestTable { 
-	background-color: #7099C5; 
-	color: black;
-	margin-bottom: 1em;
-}
-#content .ForrestTable th a:link { color: white; }
-#content .ForrestTable th a:visited { color: #cfdced; }
-#content .ForrestTable th a:active { color: #000066; }
-#content .ForrestTable th a:hover { color: #000066; }
-#content .ForrestTable caption { text-align: left; color: black; font-weight: bold; }
-#content .ForrestTable th { text-align: center; color: #ffffff; }
-#content .ForrestTable td { text-align: center; background-color: #f0f0ff; color: black; padding: 5px 10px; }
-
-#content .activities th {
-	font-weight: bold;
-	text-align: left;
-	width: 25%;
-}
-#content .activities td {
-	vertical-align: top;
-	padding-bottom: 1em;
-}
 
 /**
  * Misc Styles
@@ -364,8 +340,8 @@ li p {
 
 .pdflink img {
 	display: block;
-	height: 32px;
-	width: 32px;
+	height: 16px;
+	width: 16px;
 }
 .printlink {
 	float: right;
