finished footer: added feedback notice
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@23196 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/css-style-dev/css/screen.css
+++ b/src/core/context/skins/css-style-dev/css/screen.css
@@ -281,7 +281,15 @@ img.cornersmall {
 #content li {
 	padding: 0 5px;
 }
-
+#feedback {
+	color: black;
+	background: #CFDCED;
+	text-align:center;
+}
+#feedback #feedbackto {
+	font-size: 90%;
+	color: black;
+}
 #footer {
 	clear: both;
 	position: relative; /* IE bugfix (http://www.dracos.co.uk/web/css/ie6floatbug/) */
