The inline-block is not a valid value for the display parameter.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@31014 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/tigris-style-1_1/css/tigris.css
+++ b/src/core/context/skins/tigris-style-1_1/css/tigris.css
@@ -723,7 +723,7 @@ dd {
 	/* hide from macie5\*/
 	float: left;
 	/* resume */
-	display: inline-block;
+	display: inline;
 	height: 15px;
 	width: 34px;
 	padding-left: 0 !important;
