--- a/skin/forrest.css
+++ b/skin/forrest.css
@@ -27,9 +27,9 @@
 }
   
 a.external  {
-        padding: 0 20px 0px 0px;
-	display:inline; display:inline-block;
-        background-repeat: no-repeat;
+  padding: 0 20px 0px 0px;
+	display:inline;
+  background-repeat: no-repeat;
 	background-position: center right;
 	background-image: url(images/external-link.gif);
 }
