- added the alternate location to fresh site - added some margin to feedback - declared @box-location in dtd - moved feed back to bottom of the page
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36193 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -284,6 +284,7 @@ img.cornersmall {
 	color: black;
 	background: #CFDCED;
 	text-align:center;
+	margin-top: 5px;
 }
 #feedback #feedbackto {
 	font-size: 90%;
