--- a/src/core/context/skins/pelt-dev/css/screen.css
+++ b/src/core/context/skins/pelt-dev/css/screen.css
@@ -313,8 +313,9 @@ img.cornersmall {
 	text-align: right;
 }
 #footer a { color: white; }
-#footer .logos img {
-	margin-right: 5px;
+
+#footer #logos {
+	text-align: left;
 }
 
 
